--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
 Pos=0,0
 Size=645,391
-Collapsed=1
+Collapsed=0
 
 [Window][ImPlot Demo]
 Pos=660,168
@@ -31,7 +31,7 @@ Collapsed=0
 [Window][Axis]
 Pos=0,391
 Size=142,122
-Collapsed=0
+Collapsed=1
 
 [Window][E:\cgModel\bunny4000.half]
 Pos=60,60
@@ -54,7 +54,7 @@ Size=560,247
 Collapsed=0
 
 [Window][PointCloud]
-Pos=939,344
+Pos=0,391
 Size=308,296
 Collapsed=0
 
@@ -96,5 +96,15 @@ Collapsed=0
 [Window][Simulation]
 Pos=0,19
 Size=120,56
+Collapsed=0
+
+[Window][MinCurvature]
+Pos=1508,579
+Size=518,299
+Collapsed=0
+
+[Window][MaxCurvature]
+Pos=60,60
+Size=518,299
 Collapsed=0
 
