--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=0,0
-Size=645,391
+Size=468,391
 Collapsed=0
 
 [Window][ImPlot Demo]
@@ -19,19 +19,19 @@ Size=359,278
 Collapsed=0
 
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\DamagedHelmet\glTF\DamagedHelmet.gltf]
-Pos=0,433
+Pos=0,391
 Size=640,220
 Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half]
 Pos=0,391
-Size=643,554
+Size=389,554
 Collapsed=0
 
 [Window][Axis]
 Pos=0,391
 Size=142,122
-Collapsed=1
+Collapsed=0
 
 [Window][E:\cgModel\bunny4000.half]
 Pos=60,60
@@ -49,7 +49,7 @@ Size=540,160
 Collapsed=0
 
 [Window][E:\cgModel\nv_pro\downloaded_resources\geforce.csf.gz]
-Pos=0,433
+Pos=0,391
 Size=560,247
 Collapsed=0
 
@@ -59,7 +59,7 @@ Size=308,296
 Collapsed=0
 
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\Sponza\glTF\Sponza.gltf]
-Pos=0,433
+Pos=0,391
 Size=646,235
 Collapsed=0
 
@@ -84,9 +84,9 @@ Size=518,299
 Collapsed=0
 
 [Window][VertexArea]
-Pos=1374,712
-Size=518,299
-Collapsed=0
+Pos=1378,712
+Size=514,299
+Collapsed=1
 
 [Window][SDF]
 Pos=1365,594
@@ -104,7 +104,27 @@ Size=518,299
 Collapsed=0
 
 [Window][MaxCurvature]
-Pos=60,60
+Pos=1418,694
 Size=518,299
+Collapsed=0
+
+[Window][E:\cgModel\glTF-Sample-Models-master\2.0\BrainStem\glTF\BrainStem.gltf]
+Pos=0,391
+Size=459,297
+Collapsed=0
+
+[Window][E:\cgModel\nv_pro\downloaded_resources\worldcar.csf.gz]
+Pos=0,391
+Size=459,247
+Collapsed=0
+
+[Window][PostEffect]
+Pos=543,624
+Size=300,100
+Collapsed=1
+
+[Window][NodeTree]
+Pos=0,0
+Size=388,470
 Collapsed=0
 
