--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -20,12 +20,12 @@ Collapsed=0
 
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\DamagedHelmet\glTF\DamagedHelmet.gltf]
 Pos=0,391
-Size=640,220
+Size=461,219
 Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half]
 Pos=0,391
-Size=389,554
+Size=398,554
 Collapsed=0
 
 [Window][Axis]
@@ -39,7 +39,7 @@ Size=338,232
 Collapsed=0
 
 [Window][E:\cgModel\Armadillo.half]
-Pos=60,60
+Pos=0,391
 Size=338,255
 Collapsed=0
 
@@ -61,7 +61,7 @@ Collapsed=0
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\Sponza\glTF\Sponza.gltf]
 Pos=0,391
 Size=646,235
-Collapsed=0
+Collapsed=1
 
 [Window][InstancedCube]
 Pos=0,433
@@ -94,7 +94,7 @@ Size=518,299
 Collapsed=0
 
 [Window][Simulation]
-Pos=0,19
+Pos=0,391
 Size=120,56
 Collapsed=0
 
@@ -125,6 +125,51 @@ Collapsed=1
 
 [Window][NodeTree]
 Pos=0,0
-Size=388,470
+Size=460,396
+Collapsed=0
+
+[Window][E:\cgModel\model\buddha\buddha.half]
+Pos=0,391
+Size=419,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(-9.000000, 6.000000, -10.000000)]
+Pos=0,391
+Size=345,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(-700.000000, -100.000000, 800.000000)]
+Pos=0,391
+Size=345,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(-900.000000, 300.000000, 700.000000)]
+Pos=0,391
+Size=345,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(-800.000000, -500.000000, -800.000000)]
+Pos=0,391
+Size=345,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(-700.000000, -700.000000, 600.000000)]
+Pos=0,391
+Size=345,347
+Collapsed=0
+
+[Window][E:\cgModel\bunny6000.half(0.000000, 0.000000, 0.000000)]
+Pos=0,391
+Size=454,231
+Collapsed=1
+
+[Window][E:\cgModel\bunny6000.half(1200.000000, 400.000000, 1000.000000)]
+Pos=0,391
+Size=345,324
+Collapsed=0
+
+[Window][E:\cgModel\glTF-Sample-Models-master\2.0\EnvironmentTest\glTF\EnvironmentTest.gltf]
+Pos=0,391
+Size=456,330
 Collapsed=0
 
