STEPファイルローダー作成

--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -161,7 +161,7 @@ Collapsed=0
 [Window][E:\cgModel\bunny6000.half(0.000000, 0.000000, 0.000000)]
 Pos=0,391
 Size=454,231
-Collapsed=1
+Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half(1200.000000, 400.000000, 1000.000000)]
 Pos=0,391
@@ -176,5 +176,25 @@ Collapsed=0
 [Window][Volume]
 Pos=0,391
 Size=468,260
+Collapsed=0
+
+[Window][E:\cgModel\step\123Block_Color.stp]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][2DPointCloud]
+Pos=0,391
+Size=463,265
+Collapsed=0
+
+[Window][ConstraintDelauneyTriangle]
+Pos=0,391
+Size=427,181
+Collapsed=0
+
+[Window][DelaunayDebugNode]
+Pos=0,391
+Size=461,220
 Collapsed=0
 
