--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -30,7 +30,7 @@ Collapsed=0
 
 [Window][Axis]
 Pos=0,391
-Size=142,122
+Size=32,32
 Collapsed=0
 
 [Window][E:\cgModel\bunny4000.half]
@@ -50,7 +50,7 @@ Collapsed=0
 
 [Window][E:\cgModel\nv_pro\downloaded_resources\geforce.csf.gz]
 Pos=0,391
-Size=560,247
+Size=32,32
 Collapsed=0
 
 [Window][PointCloud]
@@ -61,7 +61,7 @@ Collapsed=0
 [Window][E:\cgModel\glTF-Sample-Models-master\2.0\Sponza\glTF\Sponza.gltf]
 Pos=0,391
 Size=646,235
-Collapsed=1
+Collapsed=0
 
 [Window][InstancedCube]
 Pos=0,433
@@ -126,7 +126,7 @@ Collapsed=1
 [Window][NodeTree]
 Pos=0,0
 Size=460,396
-Collapsed=0
+Collapsed=1
 
 [Window][E:\cgModel\model\buddha\buddha.half]
 Pos=0,391
@@ -160,8 +160,8 @@ Collapsed=0
 
 [Window][E:\cgModel\bunny6000.half(0.000000, 0.000000, 0.000000)]
 Pos=0,391
-Size=454,231
-Collapsed=0
+Size=438,406
+Collapsed=1
 
 [Window][E:\cgModel\bunny6000.half(1200.000000, 400.000000, 1000.000000)]
 Pos=0,391
@@ -196,5 +196,15 @@ Collapsed=0
 [Window][DelaunayDebugNode]
 Pos=0,391
 Size=461,220
+Collapsed=0
+
+[Window][E:\cgModel\step\cubsomcy.stp]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\fusion360\Torus2D.step]
+Pos=0,391
+Size=32,35
 Collapsed=0
 
