--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -125,8 +125,8 @@ Collapsed=1
 
 [Window][NodeTree]
 Pos=0,0
-Size=460,396
-Collapsed=1
+Size=506,705
+Collapsed=0
 
 [Window][E:\cgModel\model\buddha\buddha.half]
 Pos=0,391
@@ -206,5 +206,55 @@ Collapsed=0
 [Window][E:\cgModel\step\fusion360\Torus2D.step]
 Pos=0,391
 Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\angle1.stp3]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\123Block_Color.stp0]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\cubcylso.stp2]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\cubsomcy.stp1]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\mycylinder.stp4]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\fusion360\Torus2D.step5]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\fusion360\concaveCylinder.step6]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\fusion360\fillet2D.step7]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][E:\cgModel\step\cubsomcy.stp0]
+Pos=0,391
+Size=32,35
+Collapsed=0
+
+[Window][Terrain]
+Pos=0,391
+Size=535,241
 Collapsed=0
 
